--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8">
-        <title>Sujanthan Rajeevkanth</title>
+        <title>Anton Pettersson</title>
         <link rel="stylesheet" href="stilmallindex.css">
     </head>
     <body>
@@ -11,13 +11,10 @@
         </header>
         <nav>
             <h3>Om Mig</h3>
-            <a href="https://sujanthanr.github.io/ommig.html">Om Sujanthan Rajeevkanth</a>
-            <a href="https://sujanthanr.github.io/input.html">Bambam</a>
-            <a href="https://sujanthanr.github.io/stilmall.html">Gran By Magnus</a>
-            <a href="https://sujanthanr.github.io/inlineblock.html">Dunder Cars</a>
+            <a href="https:// Anton1237.github.io/sidaommig">Om Anton Pettersson</a>
         </nav> 
     <main>
-        <img src="Logga.png" alt="auto" title="GranbyMagnus">
+        
         <p>Bildkälla:Sujanthan Rajeevkanth, Licens: Privat</p>
     </main>
         
