--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </header>
         <nav>
             <h3>Om Mig</h3>
-            <a href="Anton1237.github.io/sidaommig.html">Om Anton Pettersson</a>
+            <a href="http://Anton1237.github.io/sidaommig.html">Om Anton Pettersson</a>
         </nav> 
     <main>
         
