--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
              
             <a href="http://Anton1237.github.io/sidaommig.html">Om Anton Pettersson</a>
             
+            <a
+            href="http://Anton1237.github.io/dom.html">DOM
+            </a>   
         </nav>
      <main>
          <img src="A.png" alt="auto" title="A">
