--- a/projekt.html
+++ b/projekt.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>TRE S</title>
         <link rel="stylesheet" href="projekt.css">
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="projekt.js"></script>
     </head>
     <body>
