--- a/slutspel/index.html
+++ b/slutspel/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no"> 
         <link rel ="stylesheet" href = "stilmallgruvan.css">
-        <title>gruvan</title> 
+        <title>SpacePenguin</title> 
     </head> 
     <body>
         <script src="js/GameStart.js"></script>
@@ -11,8 +11,9 @@
         <script src="js/GameState1.js"></script>
         <script src="js/GameState2.js"></script>
         <script src="js/GameOver.js"></script>
+        <script src="js/GameStateWin.js"></script>
         <script src="js/main.js"></script> 
-    
+        
     </body>
 
 
