--- a/endgame.html
+++ b/endgame.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="slutspel.css"> 
+        <link rel="stylesheet" href="endgame.css"> 
         <title>SpacePenguin</title>
     </head>
     <body>
     <main>
-    <a href="anton1237.github.io/slutspel.html" >
-                <img src="frontbild.png" alt="auto" title="Titelbild">
+    <a href="anton1237.github.io/slutspel" >
+                <img class="anpassad" src="frontbild.png" alt="auto" title="Spelet">
             </a>
     </main>
     <footer>
-    <h1>Källor</h1>   
+    <p>Källor</p>  
     <a href="pixabay.com">Bilder tagna från pixabay</a>
     </footer>
     </body>
