--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a
                 href="http://Anton1237.github.io/projekt.html">Projekt tre S</a>
                 
-                <a href="http://Anton1237.github.io/slutspel">SpacePenguin</a>
+                <a href="http://Anton1237.github.io/endgame.html">SpacePenguin</a>
         
         </nav>
         <main>
