--- a/endgame.html
+++ b/endgame.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <main>
-    <a href="anton1237.github.io/slutspel" >
+    <a href="https://anton1237.github.io/slutspel/" >
                 <img class="anpassad" src="frontbild.png" alt="auto" title="Spelet">
             </a>
     </main>
