--- a/slutspel/index.html
+++ b/slutspel/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no"> 
-        <link rel ="stylesheet" href = "stilmallgruvan.css">
+        <link rel ="stylesheet" href = "stilmallslutspel.css">
         <title>SpacePenguin</title> 
     </head> 
     <body>
